docs/api/graphql/v0/operations/mutations/create-group-invitation.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: create-group-invitation
title: createGroupInvitation
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








Invites a user to a group


```graphql
createGroupInvitation(
  email: String!
  groupId: ID!
  organizationId: ID!
): InvitationPayload
```




### Arguments

#### [<code style={{ fontWeight: 'normal' }}>createGroupInvitation.<b>email</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v0/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> 



#### [<code style={{ fontWeight: 'normal' }}>createGroupInvitation.<b>groupId</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v0/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> 



#### [<code style={{ fontWeight: 'normal' }}>createGroupInvitation.<b>organizationId</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v0/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> 



### Type

#### [<code style={{ fontWeight: 'normal' }}><b>InvitationPayload</b></code>](/api/graphql/v0/types/objects/invitation-payload.mdx) <Badge class="badge badge--secondary " text="object"/>