docs/api/graphql/v1/operations/mutations/create-group-invitation.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: create-group-invitation
title: createGroupInvitation
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








Invite a user to a group by email address.

Sends an email invitation to the specified address. If the user already has a Massdriver
account, the invitation appears in their pending invites (see the `viewer` query). If they
don't have an account yet, they'll be prompted to sign up when they accept.

Requires `organization_admin` permissions.


```graphql
createGroupInvitation(
  organizationId: ID!
  groupId: ID!
  email: String!
): GroupInvitationPayload
```




### Arguments

#### [<code style={{ fontWeight: 'normal' }}>createGroupInvitation.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>createGroupInvitation.<b>groupId</b></code>](#group-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#group-id\} 
The group to invite the user to.


#### [<code style={{ fontWeight: 'normal' }}>createGroupInvitation.<b>email</b></code>](#email)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v1/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#email\} 
Email address of the user to invite.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>GroupInvitationPayload</b></code>](/api/graphql/v1/types/objects/group-invitation-payload.mdx) <Badge class="badge badge--secondary " text="object"/>